crates/ignis_analyzer/tests/snapshots/golden_ok__mutable_variable_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 67
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(x [mut]) : void
          init:
            Literal(Int32(1)) : i32
        ExprStmt : i32
          Assign(=) : i32
            target:
              Variable(x [mut]) : i32
            value:
              Literal(Int32(2)) : i32
        Return : never

--- Variable Initializers ---

x: i32 [mut] = Literal(Int32(1))
