crates/ignis_analyzer/tests/snapshots/golden_ok__numeric_cast_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 153
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
(no diagnostics)
