crates/ignis_analyzer/tests/snapshots/golden_ok__numeric_cast_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 154
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn convert(): f64
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Int32(42)) : i32
        Return : never
          Cast(-> f64) : f64
            Variable(x) : i32

--- Variable Initializers ---

x: i32 = Literal(Int32(42))
