crates/ignis_analyzer/tests/snapshots/golden_ok__record_field_access_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): i32
  body:
    Block : never
      statements:
        Let(p) : void
          init:
            RecordInit(Point) : record Point
              field[0]:
                Literal(Int32(10)) : i32
              field[1]:
                Literal(Int32(20)) : i32
        Return : never
          Binary(Add) : i32
            left:
              FieldAccess(.0) : i32
                Variable(p) : record Point
            right:
              FieldAccess(.1) : i32
                Variable(p) : record Point

--- Variable Initializers ---

p: record Point = <complex: record Point>
