crates/ignis_analyzer/tests/snapshots/golden_ok__record_instance_method_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): i32
  body:
    Block : never
      statements:
        Let(c) : void
          init:
            RecordInit(Counter) : record Counter
              field[0]:
                Literal(Int32(42)) : i32
        Return : never
          MethodCall(get) : i32
            receiver:
              Reference(&) : &record Counter
                Variable(c) : record Counter

--- Variable Initializers ---

c: record Counter = <complex: record Counter>
