crates/ignis_analyzer/tests/snapshots/golden_ok__record_static_method_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): i32
  body:
    Block : never
      statements:
        Let(p) : void
          init:
            MethodCall(origin) : record Point
        Return : never
          FieldAccess(.0) : i32
            Variable(p) : record Point

--- Variable Initializers ---

p: record Point = <complex: record Point>
