crates/ignis_analyzer/tests/snapshots/golden_ok__staged_generated_replay_makes_attached_methods_callable_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn callGenerated(user: record User): void
  body:
    Block : never
      statements:
        ExprStmt : void
          MethodCall(generatedDescribe) : void
            receiver:
              Reference(&) : &record User
                Variable(user [param]) : record User
        Return : never

fn derive(context: record Context, target: record ItemReference): void
  body:
    Block : void
      statements:
        ExprStmt : void
          Call(emitMethod) : void
            args:
              [0]:
                Variable(context [param]) : record Context
              [1]:
                Variable(target [param]) : record ItemReference
              [2]:
                Literal(String("generatedDescribe")) : str
              [3]:
                Literal(Boolean(false)) : bool
        ExprStmt : void
          Call(emitImplements) : void
            args:
              [0]:
                Variable(context [param]) : record Context
              [1]:
                Variable(target [param]) : record ItemReference
              [2]:
                Literal(String("Serializable")) : str

fn emitImplements(context: record Context, target: record ItemReference, traitName: str): void
  body:
    Block : never
      statements:
        Return : never

fn emitMethod(context: record Context, target: record ItemReference, name: str, isStatic: bool): void
  body:
    Block : never
      statements:
        Return : never

fn requireSerializable(value: T): void
  body:
    Block : never
      statements:
        Return : never

fn smoke(): void
  body:
    Block : never
      statements:
        ExprStmt : void
          Call(requireSerializable) : void
            args:
              [0]:
                RecordInit(User) : record User
                  field[0]:
                    Literal(Int32(1)) : i32
        Return : never
