crates/ignis_analyzer/tests/snapshots/golden_ok__trait_default_method_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(item) : void
          init:
            RecordInit(Item) : record Item
              field[0]:
                Literal(Int32(5)) : i32
        Let(_x) : void
          init:
            MethodCall(describe) : i32
              receiver:
                Reference(&) : &record Item
                  Variable(item) : record Item
        Return : never

--- Variable Initializers ---

_x: i32 = <complex: i32>
item: record Item = <complex: record Item>
