crates/ignis_analyzer/tests/snapshots/golden_ok__trait_default_method_override_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
(no diagnostics)
