crates/ignis_analyzer/tests/snapshots/golden_ok__trait_multiple_implements_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(p) : void
          init:
            RecordInit(Person) : record Person
              field[0]:
                Literal(Int32(25)) : i32
        Let(_a) : void
          init:
            MethodCall(greet) : i32
              receiver:
                Reference(&) : &record Person
                  Variable(p) : record Person
        Let(_b) : void
          init:
            MethodCall(describe) : i32
              receiver:
                Reference(&) : &record Person
                  Variable(p) : record Person
        Return : never

--- Variable Initializers ---

_a: i32 = <complex: i32>
_b: i32 = <complex: i32>
p: record Person = <complex: record Person>
